tests/fixtures/fail/pattern_literal_payload_mismatch.sc
let Value = enum { Number(i32), Empty }

let main(): i32 = Value.Number(42) match {
  Number(true) => 1,
  Number(_) => 2,
  Empty => 0,
}
